# openmcx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Limitations.md  NOTICE.md  Readme.md  Readme_VS_Code.md  build.bat  build.sh  run_tests.py
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/script-action/: action.yml
.github/workflows/: openmcx-build.yml
.vscode.sample/: launch.json
cmake/: sspschemafiles.cmake  versionfile.cmake
cmake/fmi-library/: CMakeLists.txt
docker/: Dockerfile
examples/: Readme.md
examples/connections/: model.ssd
examples/connections/reference/: Gain 1_in.csv  Gain 1_res.csv  Sinus 1_res.csv  Sum 1_in.csv  Sum 1_res.csv
examples/getting_started/: model.ssd
examples/getting_started/reference/: FMU_in.csv  FMU_res.csv
examples/parameters/: model.ssd
examples/parameters/reference/: FMU 1_res.csv
examples/units/: model.ssd
examples/units/reference/: Constant 1_res.csv  FMU 1_in.csv  FMU 1_res.csv
examples/vector_ports/: model.ssd
fmus/: CMakeLists.txt
fmus/gain/: CMakeLists.txt  gain.c  modelDescription.xml
fmus/sinusGenerator/: CMakeLists.txt  modelDescription.xml  sinusGenerator.c
fmus/vectorSum/: CMakeLists.txt  modelDescription.xml  vectorSum.c
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/common/: logging.h  memory.h  status.h
libs/tarjan/: CMakeLists.txt  tarjan.c  tarjan.h
libs/util/: CMakeLists.txt
libs/util/include/util/: libs.h  os.h  paths.h  string.h
libs/util/src/common/: os.c  paths.c  string.c
libs/util/src/linux/: libs.c
libs/util/src/unix/: libs.c  os.c  paths.c  string.c
libs/util/src/win/: libs.c  os.c  paths.c  string.c
mcx/: CMakeLists.txt  mcx.c
scripts/SSP/: Common.xsd  Component.xsd  ComponentResults.xsd  Config.xsd  Connection.xsd  Decoupling.xsd  FmuParameters.xsd  InterExtrapolation.xsd  Parameters.xsd  Ports.xsd  Results.xsd  Task.xsd
src/: CMakeLists.txt  CentralParts.h  Memory.c  Memory.h  version.c.in  version.h.in
src/components/: ComponentFactory.c  ComponentFactory.h  ComponentTypes.c  ComponentTypes.h  comp_constant.c  comp_constant.h  comp_fmu.c  comp_fmu.h  comp_fmu_impl.h  comp_integrator.c  comp_integrator.h  comp_vector_integrator.c  comp_vector_integrator.h
src/core/: Component.c  Component.h  Component_impl.h  Component_interface.h  Config.c  Config.h  Conversion.c  Conversion.h  Databus.c  Databus.h  Databus_impl.h  Dependency.c  Dependency.h  Interpolation.c  Interpolation.h  Model.c  Model.h  SubModel.c  SubModel.h  Task.c  Task.h
src/core/channels/: Channel.c  Channel.h  ChannelInfo.c  ChannelInfo.h  ChannelValue.c  ChannelValue.h  Channel_impl.h  VectorChannelInfo.c  VectorChannelInfo.h
src/core/connections/: Connection.c  Connection.h  ConnectionInfo.c  ConnectionInfo.h  ConnectionInfoFactory.c  ConnectionInfoFactory.h  ConnectionInfo_impl.h  Connection_impl.h  FilteredConnection.c  FilteredConnection.h  FilteredConnection_impl.h
src/core/connections/filters/: DiscreteFilter.c  DiscreteFilter.h  ExtFilter.c  ExtFilter.h  Filter.c  Filter.h  IntExtFilter.c  IntExtFilter.h  IntFilter.c  IntFilter.h
src/fmu/: Fmu1Value.c  Fmu1Value.h  Fmu2Value.c  Fmu2Value.h  common_fmu.c  common_fmu.h  common_fmu1.c  common_fmu1.h  common_fmu2.c  common_fmu2.h
src/objects/: Map.c  Map.h  Object.c  Object.h  ObjectContainer.c  ObjectContainer.h  StringContainer.c  StringContainer.h
src/reader/: EnumMapping.c  EnumMapping.h  InputRoot.c  InputRoot.h  Reader.c  Reader.h
src/reader/config/: ConfigInput.c  ConfigInput.h
src/reader/core/: InputElement.c  InputElement.h
src/reader/model/: ModelInput.c  ModelInput.h
src/reader/model/components/: ComponentInput.c  ComponentInput.h  ComponentResultsInput.c  ComponentResultsInput.h  ComponentsInput.c  ComponentsInput.h
src/reader/model/components/specific_data/: ConstantInput.c  ConstantInput.h  FmuInput.c  FmuInput.h  IntegratorInput.c  IntegratorInput.h  VectorIntegratorInput.c  VectorIntegratorInput.h
src/reader/model/connections/: ConnectionInput.c  ConnectionInput.h  ConnectionsInput.c  ConnectionsInput.h  DecoupleInput.c  DecoupleInput.h  EndpointInput.c  EndpointInput.h  InterExtrapolationInput.c  InterExtrapolationInput.h
src/reader/model/parameters/: ArrayParameterDimensionInput.c  ArrayParameterDimensionInput.h  ArrayParameterInput.c  ArrayParameterInput.h  ParameterInput.c  ParameterInput.h  ParametersInput.c  ParametersInput.h  ScalarParameterInput.c  ScalarParameterInput.h
src/reader/model/parameters/specific_data/: FmuParameterInput.c  FmuParameterInput.h
src/reader/model/ports/: PortInput.c  PortInput.h  PortsInput.c  PortsInput.h  ScalarPortInput.c  ScalarPortInput.h  VectorPortInput.c  VectorPortInput.h
src/reader/ssp/: Components.c  Components.h  Config.c  Config.h  Connections.c  Connections.h  Model.c  Model.h  Parameters.c  Parameters.h  Ports.c  Ports.h  Reader.c  Reader.h  Results.c  Results.h  Schema.c  Schema.h  SpecificData.c  SpecificData.h  Task.c  Task.h  Units.c  Units.h  Util.c  Util.h
src/reader/task/: BackendInput.c  BackendInput.h  BackendsInput.c  BackendsInput.h  ResultsInput.c  ResultsInput.h  TaskInput.c  TaskInput.h
src/steptypes/: StepType.c  StepType.h  StepTypeParallelMT.c  StepTypeParallelMT.h  StepTypeParallelST.c  StepTypeParallelST.h  StepTypeSequential.c  StepTypeSequential.h
src/storage/: Backends.c  Backends.h  ChannelStorage.c  ChannelStorage.h  ComponentStorage.c  ComponentStorage.h  PPD.c  PPD.h  ResultsStorage.c  ResultsStorage.h  StorageBackendCsv.c  StorageBackendCsv.h  StorageBackendText.c  StorageBackendText.h  StorageBackendText_impl.h
src/units/: Units.c  Units.h
src/util/: compare.h  events.h  md5.h  md5_file.h  mutex.h  signals.h  socket.h  stdlib.h  threads.h  time.h
src/util/common/: compare.c  md5.c  md5_file.c  signals.c  stdlib.c  threads.c  time.c
src/util/linux/: mutex.c  threads.c
src/util/unix/: events.c  signals.c  socket.c  stdlib.c  threads.c  time.c
src/util/win/: events.c  mutex.c  signals.c  socket.c  stdlib.c  threads.c  time.c
(+7 files in other folders)
